pulse-eclipse-plugin/src/SMC/PluralParser.java
// $ANTLR 3.3 Nov 30, 2010 12:50:56 C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g 2018-03-31 13:43:24

package pt.uma.SMC;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class PluralParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "AT_FULL", "AT_PURE", "AT_IMMUTABLE", "AT_SHARE", "AT_UNIQUE", "PUBLIC_BEHAVIOR", "FULL", "PURE", "IMMUTABLE", "SHARE", "UNIQUE", "LSBRACKET", "RSBRACKET", "PERM", "EQUAL", "EQUALOPERATOR", "IN", "THIS", "RESULT", "PARAM", "REQUIRES", "ENSURES", "QUOTE", "AND", "USE", "USEFIELDS", "PUNCTUATION", "CASES", "LCBRACKET", "RCBRACKET", "CLASS_STATES", "REFINE", "VALUE", "STATE", "STATES", "DIM", "NAME", "INV", "OPERATOR", "SEMICOLON", "LESS", "LESSTHANEQUAL", "GREATER", "GREATERTHANEQUAL", "ANDD", "OR", "JMLSTART", "JMLEND", "PLUSMINUSOPERATOR", "ASSIGNABLE", "NOTHING", "EVERYTHING", "GHOST", "INT", "INVARIANT", "OLD", "ID", "NUMBERS", "WS"
    };
    public static final int EOF=-1;
    public static final int AT_FULL=4;
    public static final int AT_PURE=5;
    public static final int AT_IMMUTABLE=6;
    public static final int AT_SHARE=7;
    public static final int AT_UNIQUE=8;
    public static final int PUBLIC_BEHAVIOR=9;
    public static final int FULL=10;
    public static final int PURE=11;
    public static final int IMMUTABLE=12;
    public static final int SHARE=13;
    public static final int UNIQUE=14;
    public static final int LSBRACKET=15;
    public static final int RSBRACKET=16;
    public static final int PERM=17;
    public static final int EQUAL=18;
    public static final int EQUALOPERATOR=19;
    public static final int IN=20;
    public static final int THIS=21;
    public static final int RESULT=22;
    public static final int PARAM=23;
    public static final int REQUIRES=24;
    public static final int ENSURES=25;
    public static final int QUOTE=26;
    public static final int AND=27;
    public static final int USE=28;
    public static final int USEFIELDS=29;
    public static final int PUNCTUATION=30;
    public static final int CASES=31;
    public static final int LCBRACKET=32;
    public static final int RCBRACKET=33;
    public static final int CLASS_STATES=34;
    public static final int REFINE=35;
    public static final int VALUE=36;
    public static final int STATE=37;
    public static final int STATES=38;
    public static final int DIM=39;
    public static final int NAME=40;
    public static final int INV=41;
    public static final int OPERATOR=42;
    public static final int SEMICOLON=43;
    public static final int LESS=44;
    public static final int LESSTHANEQUAL=45;
    public static final int GREATER=46;
    public static final int GREATERTHANEQUAL=47;
    public static final int ANDD=48;
    public static final int OR=49;
    public static final int JMLSTART=50;
    public static final int JMLEND=51;
    public static final int PLUSMINUSOPERATOR=52;
    public static final int ASSIGNABLE=53;
    public static final int NOTHING=54;
    public static final int EVERYTHING=55;
    public static final int GHOST=56;
    public static final int INT=57;
    public static final int INVARIANT=58;
    public static final int OLD=59;
    public static final int ID=60;
    public static final int NUMBERS=61;
    public static final int WS=62;

    // delegates
    // delegators


        public PluralParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public PluralParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return PluralParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g"; }



    // $ANTLR start "jmlSpecifications"
    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:86:1: jmlSpecifications : ( jmlClassSpecifications | jmlMethodSpecification );
    public final void jmlSpecifications() throws RecognitionException {
        try {
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:86:18: ( jmlClassSpecifications | jmlMethodSpecification )
            int alt1=2;
            int LA1_0 = input.LA(1);

            if ( (LA1_0==GHOST||LA1_0==INVARIANT) ) {
                alt1=1;
            }
            else if ( (LA1_0==JMLSTART) ) {
                alt1=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 1, 0, input);

                throw nvae;
            }
            switch (alt1) {
                case 1 :
                    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:86:20: jmlClassSpecifications
                    {
                    pushFollow(FOLLOW_jmlClassSpecifications_in_jmlSpecifications1049);
                    jmlClassSpecifications();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:86:43: jmlMethodSpecification
                    {
                    pushFollow(FOLLOW_jmlMethodSpecification_in_jmlSpecifications1051);
                    jmlMethodSpecification();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlSpecifications"


    // $ANTLR start "jmlClassSpecifications"
    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:89:1: jmlClassSpecifications : ( jmlGhostDeclaration | jmlGhostInv );
    public final void jmlClassSpecifications() throws RecognitionException {
        try {
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:89:23: ( jmlGhostDeclaration | jmlGhostInv )
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==GHOST) ) {
                alt2=1;
            }
            else if ( (LA2_0==INVARIANT) ) {
                alt2=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }
            switch (alt2) {
                case 1 :
                    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:89:25: jmlGhostDeclaration
                    {
                    pushFollow(FOLLOW_jmlGhostDeclaration_in_jmlClassSpecifications1059);
                    jmlGhostDeclaration();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:89:45: jmlGhostInv
                    {
                    pushFollow(FOLLOW_jmlGhostInv_in_jmlClassSpecifications1061);
                    jmlGhostInv();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlClassSpecifications"


    // $ANTLR start "jmlGhostDeclaration"
    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:91:1: jmlGhostDeclaration : GHOST INT dim= ID SEMICOLON ;
    public final void jmlGhostDeclaration() throws RecognitionException {
        Token dim=null;

        try {
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:91:20: ( GHOST INT dim= ID SEMICOLON )
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:91:22: GHOST INT dim= ID SEMICOLON
            {
            match(input,GHOST,FOLLOW_GHOST_in_jmlGhostDeclaration1068); 
            match(input,INT,FOLLOW_INT_in_jmlGhostDeclaration1070); 
            dim=(Token)match(input,ID,FOLLOW_ID_in_jmlGhostDeclaration1074); 
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_jmlGhostDeclaration1076); 

                E_JmlSpecification.setDimensionName((dim!=null?dim.getText():null));


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlGhostDeclaration"


    // $ANTLR start "jmlGhostInv"
    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:95:1: jmlGhostInv : INVARIANT low= NUMBERS LESSTHANEQUAL ID ANDD ID LESSTHANEQUAL high= NUMBERS SEMICOLON ;
    public final void jmlGhostInv() throws RecognitionException {
        Token low=null;
        Token high=null;

        try {
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:95:12: ( INVARIANT low= NUMBERS LESSTHANEQUAL ID ANDD ID LESSTHANEQUAL high= NUMBERS SEMICOLON )
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:95:14: INVARIANT low= NUMBERS LESSTHANEQUAL ID ANDD ID LESSTHANEQUAL high= NUMBERS SEMICOLON
            {
            match(input,INVARIANT,FOLLOW_INVARIANT_in_jmlGhostInv1084); 
            low=(Token)match(input,NUMBERS,FOLLOW_NUMBERS_in_jmlGhostInv1089); 
            match(input,LESSTHANEQUAL,FOLLOW_LESSTHANEQUAL_in_jmlGhostInv1091); 
            match(input,ID,FOLLOW_ID_in_jmlGhostInv1093); 
            match(input,ANDD,FOLLOW_ANDD_in_jmlGhostInv1095); 
            match(input,ID,FOLLOW_ID_in_jmlGhostInv1097); 
            match(input,LESSTHANEQUAL,FOLLOW_LESSTHANEQUAL_in_jmlGhostInv1099); 
            high=(Token)match(input,NUMBERS,FOLLOW_NUMBERS_in_jmlGhostInv1103); 
            match(input,SEMICOLON,FOLLOW_SEMICOLON_in_jmlGhostInv1105); 

                int nlow=Integer.parseInt((low!=null?low.getText():null));
                int nhigh=Integer.parseInt((high!=null?high.getText():null));
              E_JmlSpecification.setDimensionValues(nlow, nhigh);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlGhostInv"


    // $ANTLR start "jmlMethodSpecification"
    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:102:1: jmlMethodSpecification : JMLSTART PUBLIC_BEHAVIOR ( REQUIRES jmlRequires SEMICOLON )? ( jmlAssign )? ( jmlEnsures )? JMLEND ;
    public final void jmlMethodSpecification() throws RecognitionException {
        try {
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:102:23: ( JMLSTART PUBLIC_BEHAVIOR ( REQUIRES jmlRequires SEMICOLON )? ( jmlAssign )? ( jmlEnsures )? JMLEND )
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:102:25: JMLSTART PUBLIC_BEHAVIOR ( REQUIRES jmlRequires SEMICOLON )? ( jmlAssign )? ( jmlEnsures )? JMLEND
            {
            match(input,JMLSTART,FOLLOW_JMLSTART_in_jmlMethodSpecification1114); 
            match(input,PUBLIC_BEHAVIOR,FOLLOW_PUBLIC_BEHAVIOR_in_jmlMethodSpecification1116); 
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:102:51: ( REQUIRES jmlRequires SEMICOLON )?
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==REQUIRES) ) {
                alt3=1;
            }
            switch (alt3) {
                case 1 :
                    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:102:52: REQUIRES jmlRequires SEMICOLON
                    {
                    match(input,REQUIRES,FOLLOW_REQUIRES_in_jmlMethodSpecification1120); 
                    pushFollow(FOLLOW_jmlRequires_in_jmlMethodSpecification1122);
                    jmlRequires();

                    state._fsp--;

                    match(input,SEMICOLON,FOLLOW_SEMICOLON_in_jmlMethodSpecification1125); 

                    }
                    break;

            }

            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:102:86: ( jmlAssign )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ASSIGNABLE) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:102:87: jmlAssign
                    {
                    pushFollow(FOLLOW_jmlAssign_in_jmlMethodSpecification1130);
                    jmlAssign();

                    state._fsp--;


                    }
                    break;

            }

            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:102:99: ( jmlEnsures )?
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==ENSURES) ) {
                alt5=1;
            }
            switch (alt5) {
                case 1 :
                    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:102:100: jmlEnsures
                    {
                    pushFollow(FOLLOW_jmlEnsures_in_jmlMethodSpecification1135);
                    jmlEnsures();

                    state._fsp--;


                    }
                    break;

            }

            match(input,JMLEND,FOLLOW_JMLEND_in_jmlMethodSpecification1139); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlMethodSpecification"


    // $ANTLR start "jmlRequires"
    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:104:1: jmlRequires : ( jmlReq | jmlOrReq | jmlLessThanEqualReq );
    public final void jmlRequires() throws RecognitionException {
        try {
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:104:12: ( jmlReq | jmlOrReq | jmlLessThanEqualReq )
            int alt6=3;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==ID) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==EQUALOPERATOR) ) {
                    int LA6_2 = input.LA(3);

                    if ( (LA6_2==NUMBERS) ) {
                        int LA6_4 = input.LA(4);

                        if ( (LA6_4==SEMICOLON) ) {
                            alt6=1;
                        }
                        else if ( (LA6_4==OR) ) {
                            alt6=2;
                        }
                        else {
                            NoViableAltException nvae =
                                new NoViableAltException("", 6, 4, input);

                            throw nvae;
                        }
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 6, 2, input);

                        throw nvae;
                    }
                }
                else if ( (LA6_1==LESSTHANEQUAL) ) {
                    alt6=3;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:104:13: jmlReq
                    {
                    pushFollow(FOLLOW_jmlReq_in_jmlRequires1145);
                    jmlReq();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:104:20: jmlOrReq
                    {
                    pushFollow(FOLLOW_jmlOrReq_in_jmlRequires1147);
                    jmlOrReq();

                    state._fsp--;


                    }
                    break;
                case 3 :
                    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:104:29: jmlLessThanEqualReq
                    {
                    pushFollow(FOLLOW_jmlLessThanEqualReq_in_jmlRequires1149);
                    jmlLessThanEqualReq();

                    state._fsp--;


                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlRequires"


    // $ANTLR start "jmlOrReq"
    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:106:1: jmlOrReq : jmlReq ( OR jmlReq )+ ;
    public final void jmlOrReq() throws RecognitionException {
        try {
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:106:9: ( jmlReq ( OR jmlReq )+ )
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:106:11: jmlReq ( OR jmlReq )+
            {
            pushFollow(FOLLOW_jmlReq_in_jmlOrReq1156);
            jmlReq();

            state._fsp--;

            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:106:18: ( OR jmlReq )+
            int cnt7=0;
            loop7:
            do {
                int alt7=2;
                int LA7_0 = input.LA(1);

                if ( (LA7_0==OR) ) {
                    alt7=1;
                }


                switch (alt7) {
            	case 1 :
            	    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:106:19: OR jmlReq
            	    {
            	    match(input,OR,FOLLOW_OR_in_jmlOrReq1159); 
            	    pushFollow(FOLLOW_jmlReq_in_jmlOrReq1161);
            	    jmlReq();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    if ( cnt7 >= 1 ) break loop7;
                        EarlyExitException eee =
                            new EarlyExitException(7, input);
                        throw eee;
                }
                cnt7++;
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlOrReq"


    // $ANTLR start "jmlLessThanEqualReq"
    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:108:1: jmlLessThanEqualReq : ID LESSTHANEQUAL tstate= NUMBERS ;
    public final void jmlLessThanEqualReq() throws RecognitionException {
        Token tstate=null;

        try {
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:108:20: ( ID LESSTHANEQUAL tstate= NUMBERS )
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:108:22: ID LESSTHANEQUAL tstate= NUMBERS
            {
            match(input,ID,FOLLOW_ID_in_jmlLessThanEqualReq1170); 
            match(input,LESSTHANEQUAL,FOLLOW_LESSTHANEQUAL_in_jmlLessThanEqualReq1172); 
            tstate=(Token)match(input,NUMBERS,FOLLOW_NUMBERS_in_jmlLessThanEqualReq1176); 

            	      int n=Integer.parseInt((tstate!=null?tstate.getText():null));
            	      int x=1;
            	      while(x<=n){
            	       E_JmlSpecification.addRequires(""+x);
            	       x++;
            	    }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlLessThanEqualReq"


    // $ANTLR start "jmlReq"
    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:117:1: jmlReq : ID EQUALOPERATOR strState= NUMBERS ;
    public final void jmlReq() throws RecognitionException {
        Token strState=null;

        try {
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:117:7: ( ID EQUALOPERATOR strState= NUMBERS )
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:117:9: ID EQUALOPERATOR strState= NUMBERS
            {
            match(input,ID,FOLLOW_ID_in_jmlReq1185); 
            match(input,EQUALOPERATOR,FOLLOW_EQUALOPERATOR_in_jmlReq1187); 
            strState=(Token)match(input,NUMBERS,FOLLOW_NUMBERS_in_jmlReq1191); 

              E_JmlSpecification.addRequires((strState!=null?strState.getText():null));



            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return ;
    }
    // $ANTLR end "jmlReq"


    // $ANTLR start "jmlEnsures"
    // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:122:1: jmlEnsures : ( jmlEns | jmlOldEns );
    public final void jmlEnsures() throws RecognitionException {
        try {
            // C:\\Users\\asad22\\ANTLRWorkspace\\pulse-distro\\src\\pt\\uma\\Plural\\grammar\\Plural.g:122:11: ( jmlEns | jmlOldEns )
            int alt8=2;
            int LA8_0 = input.LA(1);

